; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_c-parser.c_c_parser_objc_synch_compound_statement.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_c-parser.c_c_parser_objc_synch_compound_statement.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CPP_OPEN_BRACE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"expected %<{%>\00", align 1
@error_mark_node = common dso_local global i32 0, align 4
@flag_objc_sjlj_exceptions = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @c_parser_objc_synch_compound_statement to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @c_parser_objc_synch_compound_statement(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @CPP_OPEN_BRACE, align 4
  %7 = call i32 @c_parser_require(i32* %5, i32 %6, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @error_mark_node, align 4
  store i32 %10, i32* %2, align 4
  br label %22

11:                                               ; preds = %1
  %12 = call i32 @c_begin_compound_stmt(i32 1)
  store i32 %12, i32* %4, align 4
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @c_parser_compound_statement_nostart(i32* %13)
  %15 = load i64, i64* @flag_objc_sjlj_exceptions, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %11
  %18 = call i32 @objc_mark_locals_volatile(i32* null)
  br label %19

19:                                               ; preds = %17, %11
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @c_end_compound_stmt(i32 %20, i32 1)
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %19, %9
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @c_parser_require(i32*, i32, i8*) #1

declare dso_local i32 @c_begin_compound_stmt(i32) #1

declare dso_local i32 @c_parser_compound_statement_nostart(i32*) #1

declare dso_local i32 @objc_mark_locals_volatile(i32*) #1

declare dso_local i32 @c_end_compound_stmt(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
